# skpod

./: .gitignore  CMakeLists.txt  MPI  MPI.c  MPI2.0.c  MPI2.c  base_output.txt  config.h  for  for.c  mpi  optimized.c  origin.c  run-for.sh  run.py  run.sh  task.c  test  test.80s-1584064,entropy2.btr  test.80s-1586911,entropy2.btr  test.80s-1586942,entropy2.btr  var75.c  var75_omp_for.c  var75_omp_task.c
x86_data/: for_data_None.csv  for_data_O2.csv  for_data_O3.csv  for_data_Ofast.csv
